# ml-transit-prediction

./: .gitignore  PERFORMANCE_OPTIMIZATIONS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  test_api.py  training_metadata.json  training_metadata_utils.py  update_metadata_test.py
fastify-inference-server/: README.md  analytics_wrapper.py  convert_to_onnx.py  inference_wrapper.py  package-lock.json  package.json  persistent_analytics_service.py  python_worker_pool.js  server.js  test.js
fastify-onnx-server/: README.md  inference_wrapper.py  package-lock.json  package.json  server.js  test.js
fastify_onnx_server/: convert_models.py
presentation/: EXECUTIVE_SUMMARY.md  INDEX.md  PRESENTATION_GUIDE.md  README.md  ml-transit-prediction.html  ml-transit-prediction.md
remix-frontend/: README.md  package-lock.json  package.json
statistical_analysis/: README.md  advanced_analytics.py  distribution_metadata.json  generate_statistical_data.py  statistical_shipping_data.csv  statistics_analyzer.py
test/: test_prediction.js
transit_time/: DEPRECATED.md  README.md  generate_synthetic_data.py  historical_shipments.csv  historical_shipments.parquet  inference.py  lgb_transit_model.txt  lgb_transit_quantile_10.txt  lgb_transit_quantile_50.txt  lgb_transit_quantile_90.txt  simple_predict.py
transit_time_cost/: README.md  generate_synthetic_data.py  historical_shipments.csv  historical_shipments.parquet  lgb_transit_model.txt  lgb_transit_quantile_50.txt  lgb_transit_quantile_90.txt  lgb_transit_time_model.txt  lgb_transit_time_quantile_10.txt  (+6 more)
(+42 files in other folders)
