[project]
name = "ml-transit-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.8.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
]
